bk_ida/gccida/g0/expand_builtin_mathfn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/builtins.c:1953:26: error: use of undeclared identifier 'machine_mode'
targeta = gen_reg_rtx( ( machine_mode)( BYTE5( expa->common.type->block.abstract_origin) >> 1)); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/builtins.c:1962:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( *( _QWORD *)( arglist->int_cst.int_cst.low + 8) + 61LL) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/builtins.c:1972:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( *( _QWORD *)( arglist->int_cst.int_cst.low + 8) + 61LL) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/builtins.c:1982:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( *( _QWORD *)( arglist->int_cst.int_cst.low + 8) + 61LL) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/builtins.c:2000:55: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( targetb, targetb, EQ, 0LL, ( machine_mode)*( ( unsigned __int8 *)targetb + 2), 0, lab1); 
                                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_builtin_mathfn/src/obj/builtins.o] Error 1
